fix view following player (use == instead of === to test thing identity); also add a single wall block so I can tell it's working and not just stuck

--- a/ypilot.css
+++ b/ypilot.css
@@ -15,6 +15,12 @@ html, body, svg {
   background-color: black;
 }
 
+#svg-container svg {
+  stroke: white;
+  stroke-width: 1.41; /* srqt(2) */
+  fill: none;
+}
+
 #welcome {
   position: absolute;
   width: 80%;
